# user-manager-api

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 20230516_init_client.sql
src/: lib.rs  main.rs  shutdown.rs
src/agents/: app.rs  handlers.rs  models.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/clients/: app.rs  handlers.rs  models.rs
src/config/: app.rs  handlers.rs  local.toml  models.rs
src/dal/: mod.rs  user_dal.rs
src/errors/: models.rs
src/health/: app.rs  handlers.rs  models.rs
src/models/: mod.rs  user.rs
src/postgres/: pool.rs
src/service/: mod.rs  user_service.rs
src/sftp/: app.rs  handlers.rs  models.rs
src/utils/: auth.rs  mod.rs  ssh.rs  ssh_keys.rs
src/vendors/: app.rs  handlers.rs  models.rs
