[package]
name = "usermsgsvc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-macros = "0.4.1"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
aws-sdk-secretsmanager = "1.17.0"
aws-config = "1.1.7"
async-trait = "0.1.77"
rsa = "0.9.6"
rand = "0.8.5"
serde_derive = "1.0.197"
pem = "3.0.3"
dotenv = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
axum-tracing-opentelemetry = "0.18.0"
tracing-opentelemetry-instrumentation-sdk = "0.18.0"
init-tracing-opentelemetry = {version = "0.12.0", features = ["otlp","tracing_subscriber_ext"] }
anyhow = "1.0.80"
tower-http = { version = "0.5.2", features = ["trace"] }