[package]
name = "user-manager-api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
config = "0.14.0"
axum = { version = "0.7.5", features = ["default"] }
axum-macros = "0.4.1"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
headers = "0.4.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
hyper = "1.3.1"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tower-http = { version = "0.5.2", features = ["full"] }
axum-otel-metrics = "0.8.1"
tracing = "0.1.40"
axum-tracing-opentelemetry = "0.18.1"
init-tracing-opentelemetry = { version = "0.18.1", features = [
    "logfmt",
    "otlp",
    "tracing_subscriber_ext",
] }
tracing-subscriber = "0.3.18"
thiserror = "1.0.61"
base64 = "0.22.1"
rand = "0.8.5"
rsa = "0.9.6"
